# RAG_System

./: .gitignore  build.sh
automotive_edge_rag/cpp/: demo_main.cpp  edge_llm_rag_system.cpp  query_classifier.cpp
automotive_edge_rag/python/: interactive_search.py  run_demo.py  vehicle_data_processor.py  vehicle_vector_search.py
automotive_edge_rag/python_cpp/: CMakeLists.txt  persistent_search_cli.cpp
llm/: CMakeLists.txt  CODE_COMPARISON.md  README.md  test_llm.sh
llm/include/: LLMWrapper.h  RagUtils.h  TextUtils.h  VoiceLLMService.h
llm/src/: LLMWrapper.cpp  RagUtils.cpp  TextUtils.cpp  VoiceLLMService.cpp  main.cpp
tts_server/: CHANGES.md  CMakeLists.txt  README.md  build.sh  run.sh
tts_server/include/: MessageQueue.h  Utils.h
tts_server/src/: TextProcessor.cpp  Utils.cpp  main.cpp
voice/: CMakeLists.txt  README.md  test_voice.sh
voice/include/: conversation_manager.h  recorder.h  unicode_utils.h
voice/src/: conversation_manager.cc  main.cc  recorder.cc  unicode_utils.cc
zmq_comm/: CMakeLists.txt
zmq_comm/include/: ZmqClient.h  ZmqInterface.h  ZmqServer.h
zmq_comm/src/: ZmqClient.cpp  ZmqInterface.cpp  ZmqServer.cpp
